--- a/index.html
+++ b/index.html
@@ -747,11 +747,11 @@
         <div class="nav-section">
             <h3>תוכן עניינים</h3>
             <ul>
-                <li><a href="#faq">שאלות נפוצות</a>
+                <li><a href="#faq" onclick="openFAQSection(event)">שאלות נפוצות</a>
                     <ul>
-                        <li><a href="#faq-operations">תפעול</a></li>
-                        <li><a href="#faq-training">הכשרות והקלטות</a></li>
-                        <li><a href="#faq-salesforce">Salesforce</a></li>
+                        <li><a href="#operations" onclick="openFAQCategory(event, 'operations')">תפעול</a></li>
+                        <li><a href="#training" onclick="openFAQCategory(event, 'training')">הכשרות והקלטות</a></li>
+                        <li><a href="#salesforce" onclick="openFAQCategory(event, 'salesforce')">Salesforce</a></li>
                     </ul>
                 </li>
                 <li><a href="#programs">תכניות</a>
@@ -1477,6 +1477,25 @@
                 </div>
 
                 <script>
+                    function openFAQSection(event) {
+                        event.preventDefault();
+                        const faqMain = document.getElementById('faq-main');
+                        if (faqMain.style.display === "none") {
+                            toggleSection('faq-main');
+                        }
+                        document.getElementById('faq').scrollIntoView({ behavior: 'smooth', block: 'center' });
+                    }
+
+                    function openFAQCategory(event, categoryId) {
+                        event.preventDefault();
+                        const faqMain = document.getElementById('faq-main');
+                        if (faqMain.style.display === "none") {
+                            toggleSection('faq-main');
+                        }
+                        showFAQCategory(categoryId);
+                        document.getElementById('faq').scrollIntoView({ behavior: 'smooth', block: 'center' });
+                    }
+
                     function toggleSection(sectionId) {
                         var content = document.getElementById(sectionId);
                         if (content.style.display === "none") {
